syntax = "proto3";

package auth.v1;

option go_package = "github.com/dietzy1/chatapp/services/auth/proto/auth/v1;authv1";

service AuthService {
rpc Login (LoginRequest) returns (LoginResponse) {}
rpc Register (RegisterRequest) returns (RegisterResponse) {}
rpc Logout (LogoutRequest) returns (LogoutResponse) {}
rpc Authenticate (AuthenticateRequest) returns (AuthenticateResponse) {}
}

message LoginRequest {
string username = 1;
string password = 2;
}

message LoginResponse {
string session = 1;
int32 status = 2;
string error = 3;
}

message RegisterRequest {
string username = 1;
string password = 2;
}
    
message RegisterResponse {
string session = 1;
int32 status = 2;
string error = 3;
}

message LogoutRequest {
string session = 1;
}

message LogoutResponse {
int32 status = 1;
string error = 2;
}

message AuthenticateRequest {
string session = 1;
}

message AuthenticateResponse {
string session = 1;
int32 status = 2;
string error = 3;
}












